Update with Day3 scripts

--- a/pom.xml
+++ b/pom.xml
@@ -7,13 +7,25 @@
     <groupId>org.example</groupId>
     <artifactId>ptl-hrm</artifactId>
     <version>1.0-SNAPSHOT</version>
-
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>15</source>
+                    <target>15</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 
     <properties>
         <selenium-java.version>4.0.0-alpha-7</selenium-java.version>
         <testng.version>7.1.0</testng.version>
         <webdrivermanager.version>4.2.2</webdrivermanager.version>
+        <javafaker.version>1.0.2</javafaker.version>
     </properties>
 
     <dependencies>
@@ -34,6 +46,16 @@
             <artifactId>webdrivermanager</artifactId>
             <version>${webdrivermanager.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.github.javafaker</groupId>
+            <artifactId>javafaker</artifactId>
+            <version>${javafaker.version}</version>
+        </dependency>
+
+
+
+
 
     </dependencies>
 
